--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Title</title>
   <!-- MDB icon -->
-  <link rel="icon" href="./img/overlays/01.png" type="image/x-icon">
+  <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -21,7 +21,7 @@
 <body>
 
   <section>
-    hello world  
+    hello world  ,...
   </section>
 
   <!-- jQuery -->
