--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
     <div class="fullWidth eight columns">
         <div class="projectFactsWrap ">
             <div class="item wow  animated animated" data-number="12" style="visibility: visible;">
-                <i class="fa fa-briefcase"></i>
+              <i class="fas fa-user-graduate cc_pointer"></i>
                 <p id="number1" class="number">12</p>
                 <span></span>
                 <p>Projects done</p>
             </div>
             <div class="item wow  animated animated" data-number="55" style="visibility: visible;">
-                <i class="fa fa-briefcase"></i>
+              <i class="fas fa-angry cc_pointer"></i>
                 <p id="number2" class="number">55</p>
                 <span></span>
                 <p>Happy clients</p>
