--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section>
     <!--Navbar -->
 <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
