--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section>
     <!--Navbar -->
 <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
-  <a class="navbar-brand" href="#">VBJC</a>
+  <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -32,26 +32,37 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home
+        <a class="nav-link" href="index.html">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="Acadmics.html">Acadmics</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">Dropdown
+          aria-haspopup="true" aria-expanded="false">About Us
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="AboutUs.html"> - About US</a>
+          <a class="dropdown-item" href="AboutUs.html"> - Vission & Mission</a>
+          <a class="dropdown-item" href="AboutUs.html"> - Director's Message</a>
         </div>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Faculty.html">Our Team</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Admission.html">Admission</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Gallery.html"> Gallery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ContactUS.html">ContactUs</a>
+      </li>
+     
+    
     </ul>
     <!-- <ul class="navbar-nav ml-auto nav-flex-icons">
       <li class="nav-item">
