--- a/web.html
+++ b/web.html
@@ -91,7 +91,7 @@
 
 <section>
   <!-- Footer -->
-<footer class="page-footer fixed-bottom font-small blue-grey lighten-5">
+<footer class="page-footer  font-small blue-grey lighten-5">
 
   <div style="background-color: #21d192;">
     <div class="container">
