--- a/Gallery.html
+++ b/Gallery.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/crouselcounter.css">
+ 
 </head>
 <body>
 
@@ -91,7 +91,7 @@
 
 <section>
   <!-- Footer -->
-<footer class="page-footer fixed-bottom font-small blue-grey lighten-5">
+<footer class="page-footer  font-small blue-grey lighten-5">
 
   <div style="background-color: #21d192;">
     <div class="container">
