--- a/Faculty.html
+++ b/Faculty.html
@@ -24,7 +24,7 @@
 
     <section>
         <!--Navbar -->
-    <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
+    <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark danger-color-dark">
       <a class="navbar-brand" href="index.html">VBJC</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
         aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
   <!-- Footer -->
 <footer class="page-footer  font-small blue-grey lighten-5">
 
-  <div style="background-color: #21d192;">
+  <div style="background-color: maroon;">
     <div class="container">
 
       <!-- Grid row-->
