--- Auto-Git Commit ---

--- a/Faculty.html
+++ b/Faculty.html
@@ -24,7 +24,7 @@
 
     <section>
         <!--Navbar -->
-    <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark danger-color-dark">
+    <nav  style="background-color: maroon; "class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
       <a class="navbar-brand" href="index.html">VBJC</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
         aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
