--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
 </head>
 <body>
 
@@ -64,30 +66,7 @@
      
     
     </ul>
-    <!-- <ul class="navbar-nav ml-auto nav-flex-icons">
-      <li class="nav-item">
-        <a class="nav-link waves-effect waves-light">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-effect waves-light">
-          <i class="fab fa-google-plus-g"></i>
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul> -->
+  
     <form class="form-inline my-1">
       <div class="md-form form-sm my-0">
         <input class="form-control form-control-sm mr-sm-2 mb-0" type="text" placeholder="Search"
@@ -102,68 +81,37 @@
   </section>
 <br>
 <br>
+<br>
+<br>
+<section>
+  this is crousel section
+</section> 
+<br>
+
 
 <section>
-  <div>
-    <div class="carousel">
-      <ul class="slides">
-        <input type="radio" name="radio-buttons" id="img-1" checked />
-        <li class="slide-container">
-          <div class="slide-image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Timisoara_-_Regional_Business_Centre.jpg">
-          </div>
-          <div class="carousel-controls">
-            <label for="img-3" class="prev-slide">
-              <span>&lsaquo;</span>
-            </label>
-            <label for="img-2" class="next-slide">
-              <span>&rsaquo;</span>
-            </label>
-          </div>
-        </li>
-        <input type="radio" name="radio-buttons" id="img-2" />
-        <li class="slide-container">
-          <div class="slide-image">
-            <img src="http://www.timisoaranight.gruzphoto.eu/IMG_8554.jpg">
-          </div>
-          <div class="carousel-controls">
-            <label for="img-1" class="prev-slide">
-              <span>&lsaquo;</span>
-            </label>
-            <label for="img-3" class="next-slide">
-              <span>&rsaquo;</span>
-            </label>
-          </div>
-        </li>
-        <input type="radio" name="radio-buttons" id="img-3" />
-        <li class="slide-container">
-          <div class="slide-image">
-            <img src="https://speakzeasy.files.wordpress.com/2015/05/twa_blogpic_timisoara-4415.jpg">
-          </div>
-          <div class="carousel-controls">
-            <label for="img-2" class="prev-slide">
-              <span>&lsaquo;</span>
-            </label>
-            <label for="img-1" class="next-slide">
-              <span>&rsaquo;</span>
-            </label>
-          </div>
-        </li>
-        <div class="carousel-dots">
-          <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
-          <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
-          <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
-        </div>
-      </ul>
+  <h2 class="head" id="about">About Us </h2>
+  <br>
+  <div  class="container">
+    <div class="row phone">
+      <div class="col">
+        <img style="margin-bottom: 10px;" src="./img/film-1668918_1280.jpg " width="120px" height=" 100px"  > 
+        <br>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptatem soluta doloremque ab nobis eveniet nisi suscipit commodi earum accusamus omnis numquam, nam voluptates nesciunt neque nemo? Dolorem, voluptate obcaecati. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel commodi exercitationem molestiae consequuntur non tempore sit ea alias odio aliquam, omnis dignissimos maxime at suscipit, et necessitatibus molestias quis. <br> <Span>   <a href="AboutUs.html"> know more...</a> </Span>
+       </p>
+      </div>
+      <div class="col">
+        <br>
+     <img  src="./img/film-1668918_1280.jpg"   width="95%" height=" 90%">
+      </div>
     </div>
-  </div>
 </section>
 
-<section>
-  <div class="sectiontitle">
-    <h2>Projects statistics</h2>
-    <span class="headerLine"></span>
-</div>
+
+<br>
+<br>
+<section class="counterss">
+  
 <div id="projectFacts" class="sectionClass">
     <div class="fullWidth eight columns">
         <div class="projectFactsWrap ">
