--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -84,7 +84,53 @@
 <br>
 <br>
 <section>
-  this is crousel section
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+
+      <div class="carousel-item active" style="background: #25c;">
+        <div class="caption">
+          <h1>Create and share your whatever</h1>
+          <h2>Make it easy for you to do whatever this thing does.</h2>
+        </div>
+      </div>
+
+      <div class="carousel-item" style="background: #52c;">
+        <div class="caption">
+          <h1>Something and share your whatever</h1>
+          <h2>Else it easy for you to do whatever this thing does.</h2>
+
+          <a class="big-button" href="" title="">Create Project</a>
+          <div class="clear"></div>
+          <a class="view-demo" href="" title="">View Demo</a>
+        </div>
+      </div>
+      
+      <div class="carousel-item" style="background-image: url('https://images.unsplash.com/photo-1476553986076-d59060d397e4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1989&q=80'); background-size: cover;">
+        <div class="caption">
+          <h1>Create and share your whatever</h1>
+          <h2>Make it easy for you to do whatever this thing does.</h2>
+        </div>
+      </div>
+
+    </div>
+    
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+  </div>
+</header>
 </section> 
 <br>
 
@@ -143,29 +189,9 @@
     </div>
 </div>
 
-
-
-
-
-
-
-<!-- <footer>
-    <div class="about-me-img">
-        <a href="http://www.jakubtursky.sk" target="_blank">
-        <img src="http://www.jakubtursky.sk/public/images/logo-brand-shadow-logo.png" alt="Jakub Turský" width="120px" >
-        </a>
-        <div class="authorWindowWrapper">
-            <div class="authorWindow">
-                <p><strong>Project statistics with counter </strong><br>
-                    Created by - <a href="http://www.jakubtursky.sk" target="_blank"><strong>Jakub Turský</strong></a> <br>
-                    For next info about me you can visit me site - <a href="http://www.jakubtursky.sk" target="_blank"> www.jakubtursky.sk </a> <br>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer> -->
 </section>
-
+<br>
+<br>
 
 
 
