--- a/index.html
+++ b/index.html
@@ -81,56 +81,38 @@
   </section>
 <br>
 <br>
-<br>
-<br>
+
 <section>
-  <div id="carousel" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-
-    <div class="carousel-inner" role="listbox">
-
-      <div class="carousel-item active" style="background: #25c;">
-        <div class="caption">
-          <h1>Create and share your whatever</h1>
-          <h2>Make it easy for you to do whatever this thing does.</h2>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./img/film-1668918_1280.jpg" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Hello</h5>
+          <p>..sdfgfdb fdeewewewd d sff df s.</p>
         </div>
       </div>
-
-      <div class="carousel-item" style="background: #52c;">
-        <div class="caption">
-          <h1>Something and share your whatever</h1>
-          <h2>Else it easy for you to do whatever this thing does.</h2>
-
-          <a class="big-button" href="" title="">Create Project</a>
-          <div class="clear"></div>
-          <a class="view-demo" href="" title="">View Demo</a>
-        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./img/wallpaper-967837_1920.jpg" alt="Second slide">
       </div>
-      
-      <div class="carousel-item" style="background-image: url('https://images.unsplash.com/photo-1476553986076-d59060d397e4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1989&q=80'); background-size: cover;">
-        <div class="caption">
-          <h1>Create and share your whatever</h1>
-          <h2>Make it easy for you to do whatever this thing does.</h2>
-        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./img/film-1668918_1280.jpg" alt="Third slide">
       </div>
-
     </div>
-    
-    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-
   </div>
-</header>
 </section> 
 <br>
 
@@ -193,7 +175,9 @@
 <br>
 <br>
 
+<section>
 
+</section>
 
 <section>
   <!-- Footer -->
