--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
+
+  <link rel="stylesheet" href="css/cards.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
@@ -147,9 +149,143 @@
 <br>
 
 <section>
-
+  <section>
+    <div class="card-body rounded-bottom">
+      <div class="container">
+      <!-- Grid row -->
+      <div class="row" style="padding-left: 10%; padding-right: 10%">
+  
+        <!-- Grid column -->
+        <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fa fa-book fa-6x pb-4 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fas fa-sticky-note fa-6x pb-4 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+         <!-- Grid column -->
+         <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fas fa-pencil-ruler fa-6x pb-4 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+    </div>
+    <div class="container">
+      <!-- Grid row -->
+      <div class="row" style="padding-left: 10%; padding-right: 10%">
+  
+        <!-- Grid column -->
+        <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fa fa-book fa-6x pb-4 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fas fa-sticky-note fa-6x pb-4 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+         <!-- Grid column -->
+         <div class="col-md">
+  
+          <div class="card crdclr">
+            <div class="card-body pb-0">
+              <i class="fas fa-pencil-ruler fa-4x pb-0 myi"></i>
+              <div class="ser-head"> 
+                <h3 >NOTES</h3>
+              </div >
+            </div>
+            <hr>
+            <div class="card-body pt-0">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
 </section>
 
+
+<br> 
+<br>
+<br>
+
+<section>
+ this is recent event section
+  </section>
+
+  <br> 
+<br>
+<br>
 <section>
   <!-- Footer -->
 <footer class="page-footer font-small blue-grey lighten-5">
