--- a/web.html
+++ b/web.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/webdeves.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
 </head>
 <body>
@@ -84,10 +85,70 @@
 <br>
 <section>
 
-    hello this is web developer page  
+  <div class="container">
+    <h1>Profile Card</h1>
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="profile-card">
+                <div class="profile-img">
+                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                </div>
+                <div class="profile-content">
+                    <h2 class="title">Henry Polles
+                        <span>Designer,Developer</span>
+                    </h2>
+                    <ul class="social-link">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-google"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-youtube"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="profile-card">
+                <div class="profile-img">
+                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                </div>
+                <div class="profile-content">
+                    <h2 class="title">Henry Polles
+                        <span>Designer,Developer</span>
+                    </h2>
+                    <ul class="social-link">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-google"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-youtube"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="profile-card">
+                <div class="profile-img">
+                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                </div>
+                <div class="profile-content">
+                    <h2 class="title">Henry Polles
+                        <span>Designer,Developer</span>
+                    </h2>
+                    <ul class="social-link">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-google"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-youtube"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    
 </section>
 
-
+<br>
+<br>
 
 <section>
   <!-- Footer -->
