--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section>
     <!--Navbar -->
-<nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
+<nav style="   background-color:#1F618D; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -149,6 +149,7 @@
 <br>
 
 <section>
+  <h2 class="head" id="about">Our Services </h2>
   <section>
     <div class="card-body rounded-bottom">
       <div class="container">
@@ -160,13 +161,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fa fa-book fa-6x pb-4 myi"></i>
+              <i class="fa fa-book fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div style="text-align: justify;"  class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -178,13 +179,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fas fa-sticky-note fa-6x pb-4 myi"></i>
+              <i class="fas fa-sticky-note fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div  style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -195,13 +196,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fas fa-pencil-ruler fa-6x pb-4 myi"></i>
+              <i class="fas fa-pencil-ruler fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div style="text-align: justify;"  class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -220,13 +221,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fa fa-book fa-6x pb-4 myi"></i>
+              <i class="fa fa-book fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div  style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -238,13 +239,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fas fa-sticky-note fa-6x pb-4 myi"></i>
+              <i class="fas fa-sticky-note fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div  style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -255,13 +256,13 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fas fa-pencil-ruler fa-4x pb-0 myi"></i>
+              <i class="fas fa-pencil-ruler fa-5x pb-1 myi"></i>
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
             </div>
             <hr>
-            <div class="card-body pt-0">
+            <div style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div>
           </div>
   
@@ -277,10 +278,10 @@
 
 <br> 
 <br>
-<br>
+
 
 <section>
- this is recent event section
+  <h2 class="head" id="about"> Recent Events  </h2>
   </section>
 
   <br> 
@@ -288,9 +289,9 @@
 <br>
 <section>
   <!-- Footer -->
-<footer class="page-footer font-small blue-grey lighten-5">
+<footer style="background-color: #AED6F1;"  class="page-footer font-small ">
 
-  <div style="background-color: #21d192;">
+  <div style="background-color: #1F618D ;">
     <div class="container">
 
       <!-- Grid row-->
