--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -282,6 +282,134 @@
 
 <section>
   <h2 class="head" id="about"> Recent Events  </h2>
+
+  <section>
+    <div class="container events">
+      <div class="d-md-flex">
+        <div class="overflow-auto  bg-light">
+      <div class="row">
+        <div class="col-md">
+            <!-- Card -->
+          <div class="card">
+  
+            <!-- Card image -->
+            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+  
+            <!-- Card content -->
+            <div class="card-body">
+  
+              <!-- Title -->
+              <h4 class="card-title"><a>Card title</a></h4>
+              <!-- Text -->
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <!-- Button -->
+              <a href="#" class="btn btn-primary">Button</a>
+  
+            </div>
+  
+          </div>
+          <!-- Card -->
+        </div>
+        <div class="col-md">
+          <!-- Card -->
+        <div class="card">
+  
+          <!-- Card image -->
+          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+  
+          <!-- Card content -->
+          <div class="card-body">
+  
+            <!-- Title -->
+            <h4 class="card-title"><a>Card title</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+  
+          </div>
+  
+        </div>
+        <!-- Card -->
+      </div>
+        <div class="col-md">
+          <!-- Card -->
+        <div class="card">
+  
+          <!-- Card image -->
+          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+  
+          <!-- Card content -->
+          <div class="card-body">
+  
+            <!-- Title -->
+            <h4 class="card-title"><a>Card title</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+  
+          </div>
+  
+        </div>
+        <!-- Card -->
+      </div>
+      <div class="col-md">
+        <!-- Card -->
+      <div class="card">
+  
+        <!-- Card image -->
+        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+  
+        <!-- Card content -->
+        <div class="card-body">
+  
+          <!-- Title -->
+          <h4 class="card-title"><a>Card title</a></h4>
+          <!-- Text -->
+          <p class="card-text" style="text-align: justify; text-justify: inter-word;">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <!-- Button -->
+          <a href="#" class="btn btn-primary">Button</a>
+  
+        </div>
+  
+      </div>
+      <!-- Card -->
+    </div>
+    <div class="col-md">
+      <!-- Card -->
+    <div class="card">
+  
+      <!-- Card image -->
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+  
+      <!-- Card content -->
+      <div class="card-body">
+  
+        <!-- Title -->
+        <h4 class="card-title"><a>Card title</a></h4>
+        <!-- Text -->
+        <p class="card-text" style="text-align: justify; text-justify: inter-word;">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <!-- Button -->
+        <a href="#" class="btn btn-primary">Button</a>
+  
+      </div>
+  
+    </div>
+    <!-- Card -->
+  </div>
+  
+    </div>
+    </div>
+    </div>
+  </div>
+  </section>
+
   </section>
 
   <br> 
