--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 <br>
 
 <section>
-
+ this is crousel section
 </section> 
 <br>
-
+<br>
 
 <section>
   <h2 class="head" id="about">About Us </h2>
@@ -108,8 +108,6 @@
       </div>
     </div>
 </section>
-
-
 <br>
 <br>
 <section class="counterss">
@@ -148,10 +146,9 @@
 </section>
 <br>
 <br>
-
 <section>
   <h2 class="head" id="about">Our Services </h2>
-  <section>
+  
     <div class="card-body rounded-bottom">
       <div class="container">
       <!-- Grid row -->
@@ -273,21 +270,12 @@
       </div>
       <!-- Grid row -->
     </div>
-  </section>
+ 
 </section>
-
-
 <br> 
 <br>
-
-
-
-
-  <br> 
-<br>
-<br>
 <section>
-
+  <h2 class="head" id="about">Recents Events </h2>
   <div id="owl-demo" class="owl-carousel owl-theme">
           
     <div class="item"><div class="card" style="width: 18rem;">
@@ -322,14 +310,7 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div></div>
-    <div class="item"><div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="./img/img2.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div></div>
+    
 
    
   </div>
