--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
   </section>
 <br>
 <br>
-
-<section>
- this is crousel section
+<br>
+<br>
+<section style="text-align: center;">
+ this is crousel section <br>
+ <b>sushrut jaldi bana ke de <br>  <i class="fas fa-angry cc_pointer"></i> </b>
 </section> 
 <br>
 <br>
@@ -97,7 +99,7 @@
   <div  class="container">
     <div class="row phone">
       <div class="col">
-        <img style="margin-bottom: 10px;" src="./img/film-1668918_1280.jpg " width="120px" height=" 100px"  > 
+        <img style="margin-bottom: 10px;" src="./img/fav.ico " width="120px" height=" 100px"  > 
         <br>
       <p class="para"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptatem soluta doloremque ab nobis eveniet nisi suscipit commodi earum accusamus omnis numquam, nam voluptates nesciunt neque nemo? Dolorem, voluptate obcaecati. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel commodi exercitationem molestiae consequuntur non tempore sit ea alias odio aliquam, omnis dignissimos maxime at suscipit, et necessitatibus molestias quis. <br> <Span>   <a href="AboutUs.html"> know more...</a> </Span>
        </p>
@@ -315,6 +317,38 @@
    
   </div>
 </section>
+<br>
+<br>
+
+<section class="notice" >
+
+  <h2 class="head" id="events"> Notice Board </h2>
+   <div class="board">
+   
+    <div class="list-group-flush">
+      <div class="list-group-item">
+        <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
+      </div>
+      <div class="list-group-item">
+        <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
+      </div>
+      <div class="list-group-item">
+        <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
+      </div>
+      <div class="list-group-item">
+        <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
+      </div>
+      
+    </div>
+
+
+  </div> 
+
+ 
+</section>
+<br>
+<br>
+
 <section>
   <!-- Footer -->
 <footer style="background-color: #AED6F1;"  class="page-footer font-small ">
