--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#1F618D; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -351,9 +351,9 @@
 
 <section>
   <!-- Footer -->
-<footer style="background-color: #AED6F1;"  class="page-footer font-small ">
+<footer style="background-color: fcf6f5ff;"  class="page-footer font-small ">
 
-  <div style="background-color: #1F618D ;">
+  <div style="background-color: #990011ff ;">
     <div class="container">
 
       <!-- Grid row-->
