--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <br>
 <br>
 
-<section class="crou">
+<section style="margin-top: 10px;">
   <div class="wrap">
     <div id="arrow-left" class="arrow"></div>
     <div id="slider">
@@ -125,7 +125,7 @@
       </div>
       <div class="col">
         <br>
-     <img  src="./img/film-1668918_1280.jpg"   width="95%" height=" 90%">
+     <img  src="./img/About us.png"   width="95%" height=" 90%">
       </div>
     </div>
 </section>
