--- a/index.html
+++ b/index.html
@@ -92,8 +92,57 @@
   </section>
 <br>
 <br>
+<section>
+  <div class="mycar">
+  <!--Carousel Wrapper-->
+<div id="carousel-example-1z" class="carousel slide" data-ride="carousel">
+  <!--Indicators-->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+  </ol>
+  <!--/.Indicators-->
+  <!--Slides-->
+  <div class="carousel-inner" role="listbox">
+    <!--First slide-->
+  <div class="carousel-item active">
+      <img class="d-block w-100" src="img/im2.jpeg"
+        alt="First slide">
+    </div>
+    <!--/First slide-->
+    <!--Second slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/im3.jpeg"
+        alt="Second slide">
+    </div>
+    <!--/Second slide-->
+    <!--Third slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/WhatsApp Image 2020-07-25 at 4.09.02 PM.jpeg"
+        alt="Third slide">
+    </div>
+    <!--/Third slide-->
+  </div>
+  <!--/.Slides-->
+  <!--Controls-->
+<a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <!--/.Controls-->
+</div>
+<!--/.Carousel Wrapper-->
+</div>
+</section>
 
-<section style="margin-top: 10px;">
+<br>
+<br>
+<!-- <section style="margin-top: 10px;">
   <div class="wrap">
     <div id="arrow-left" class="arrow"></div>
     <div id="slider">
@@ -117,7 +166,7 @@
   </div>
 
 
-</section>
+</section> -->
 
 
 <section  class="about">
